@@ -39,6 +39,7 @@ enum
    FARSO_EVENT_PRESSED_BUTTON,
    FARSO_EVENT_NOT_PRESSED_BUTTON,
    FARSO_EVENT_WROTE_TEXT_BAR,
+   FARSO_EVENT_MODIFYING_CX_SEL,
    FARSO_EVENT_MODIFIED_CX_SEL,
    FARSO_EVENT_CLOSED_WINDOW,
    FARSO_EVENT_ACTIVATED_WINDOW,
